<!-- Layout of the HomePage Activity -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Text displaid when activity is created -->
    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:context=".HomePage" />

    <!-- When clicking on the button the SettingsPage activity is openend
    There the user can adapt certain settings -->
    <Button
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Welcome"
        android:layout_marginTop="40dp"
        android:ems="5"
        android:text="@string/settings" 
        android:onClick="OpenSettings" /> 

    <!-- When clicking on the button a activity will open
    There the user can view his personal results -->
    <Button
        android:id="@+id/Results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal ="true"
        android:layout_below="@+id/Settings"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:text="@string/results" />
    
    <!-- By clicking on the button the user can start datacollection -->
     <Button
        android:id="@+id/Launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal ="true"
        android:layout_below="@+id/Results"
        android:layout_marginTop="20dp"
        android:ems="5"
        android:text="@string/launch"
        android:onClick="OpenMoodPage" />
        
</RelativeLayout>

