<!-- layout of MoodPage Activity -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <!-- Text displayd when activity is created -->
     <TextView
        android:id="@+id/MoodQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/question_mood"
        android:textSize="30sp"
        android:textStyle="bold" />
    
	 <!-- Tool used to enter moodrate  -->
     <SeekBar
        android:id="@+id/MoodSeekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"/>
     
     <!-- Displays exact value of Seekbar -->
     <TextView 
        android:id="@+id/MoodRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="30sp"/>     
     
     <TextView
        android:id="@+id/Happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MoodSeekbar"
        android:layout_alignParentRight="true"
        android:text="@string/happy"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/Unhappy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MoodSeekbar"
        android:layout_alignLeft="@+id/MoodSeekbar"
        android:text="@string/unhappy"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- When clicking this button the Camera activity is opened -->
    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:ems="5"
        android:text="@string/next_button"
        android:onClick="OpenCamera" />

</RelativeLayout>
